--- a/AppVOD/IHM/Filmo/FenetreFilmo.xaml
+++ b/AppVOD/IHM/Filmo/FenetreFilmo.xaml
@@ -11,7 +11,7 @@
             <StackPanel Orientation="Horizontal">
                 <TextBlock Text="{Binding Path=Prenom}"/>
                 <TextBlock Text=" "/>
-                <TextBlock Text="{Binding Path=Nom}"/> 
+                <TextBlock Text="{Binding Path=Nom}"/>
             </StackPanel>
         </DataTemplate>
     </Window.Resources>
@@ -150,11 +150,12 @@
                         <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="16*"/>
+                        <ColumnDefinition Width="378*"/>
+                        <ColumnDefinition Width="393*"/>
                     </Grid.ColumnDefinitions>
-                    <ListView Margin="5" Grid.Column="0" Name="listeMetteursEnScene" ItemTemplate="{StaticResource ModeleArtiste}"/>
-                    <Grid Grid.Column="1" DataContext="{Binding ElementName=listeMetteursEnScene, Path=SelectedItem}">
+                    <ListView Margin="5" Grid.Column="0" Name="listeMetteursEnScene" ItemTemplate="{StaticResource ModeleArtiste}" Grid.ColumnSpan="2"/>
+                    <Grid Grid.Column="2" DataContext="{Binding ElementName=listeMetteursEnScene, Path=SelectedItem}">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto"/>
                             <RowDefinition Height="Auto"/>
